# knight_to_victory

./: .gitignore  CMakeLists.txt  CODEOWNERS  PHASE6_SUMMARY.md  README.md  loot-plan.md
.github/workflows/: build-release.yml
docs/: BACKGROUNDS.md  HAZARDS.md  LEVELS.md  MACOS_BUILD.md  MONSTER_CUSTOMIZATION.md  PHASE6_FINAL_REPORT.md  PHASE6_TEST_RESULTS.md  PLAYTEST_GUIDE.md  PROJECTILE_SYSTEM.md
include/: asset_paths.h  background.h  config.h  damage.h  dragon.h  game.h  hazard.h  level.h  level_definitions.h  loot.h  monster.h  pickup.h  player.h  projectile.h
src/: asset_paths.c  background.c  damage.c  dragon.c  game.c  hazard.c  level.c  level1.c  level10.c  level11.c  level12.c  level13.c  level14.c  level15.c  level16.c  level17.c  level18.c  level19.c  level2.c  level20.c  level3.c  level4.c  level5.c  level6.c  level7.c  level8.c  level9.c  loot.c  main.c  monster.c  pickup.c  player.c  projectile.c
tests/: run_phase6_tests.sh  test_loot.c  test_memory.c
